kubernetes/apps/rook-ceph/operator/app/ingressroute.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/traefik.io/ingressroute_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rook-ceph-mgr-dashboard
  labels:
    app.kubernetes.io/name: rook-ceph-mgr
    app: rook-ceph-mgr
    rook_cluster: rook-ceph
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ceph.${domain}.${tld}`)
      kind: Rule
      middlewares:
        - name: forward-auth
          namespace: traefik
      services:
        - kind: Service
          name: rook-ceph-mgr-dashboard
          port: 7000
